<resources>
    <string name="app_name">Tasama</string>
    <string name="partner_avatar">Partner Avatar</string>
    <string name="battery_status">Battery Status</string>
    <string name="signal_status">Signal Status</string>
    <string name="divider">Divider</string>
    <string name="location_pin">Location Pin</string>
    <string name="speed_status">Speed Status</string>
    <string name="activity_label">activity</string>
    <string name="status_driving"> is Driving</string>
    <string name="status_moving"> is Moving</string>
    <string name="status_stationary"> is Stationary</string>
    <string name="label_driving">Driving</string>
    <string name="label_moving">Moving</string>
    <string name="label_stationary">Stationary</string>
    <string name="fetching_address">Fetching address...</string>
    <string name="default_partner_name">Partner</string>
</resources>